front-end/muebles-stgo/muebles-santiago.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: oscarhenriquezg/muebles-santiago:latest
          ports:
            - containerPort: 3000
#          env:
          # Vars de ambiente para front end por si es necesario
          # - name: API_GATEWAY_URL
          #   value: "http://ms-api-gtw:8080"

#          readinessProbe:
#            httpGet:
#              path: /
#              port: 3000
#            initialDelaySeconds: 10
#            periodSeconds: 10
#          livenessProbe:
#            httpGet:
#              path: /
#              port: 3000
#            initialDelaySeconds: 30
#            periodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
