front-end/muebles-stgo/nginx.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-test
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30101
  selector:
    run: nginx-test
